# gemini-financial-agent

./: README.md
gemini-financial-agent/: .env.example  README.md  pyproject.toml
src/agents/: financial_agent.py
src/providers/: base.py  claude_provider.py  gemini_provider.py
